version 20070618_2
Added the expires HTTP header to expire each page -1d (ASAP!)
This ought to keep browsers from caching the page.

version 20070618_1
Added a fallback library of modules to help make installation
super-fast.

version 20070617_4
Came up with a better alternative to the "loops back" wording in the
link tree page.

version 20070617_3
Fixed a bug in the is_a_valid_link subroutine.  It needed to resolve
a page alias before testing if it could link to the page.

version 20070617_2
When you use the quick palette to make a change, then close it,
it now updates the page.

version 20070617_1
Only have the encrypt button when in "edit" mode.  There's no point
to it in the "view" mode.  Updated the Selenium tests.

version 20070616_1
Added caching to the links out of a page.  It stores all *possible*
links out of a page so that if a link is incipient, and subsequently
a page is created which makes it real, it does not need to track
backwards to tell the linking page that it's now a real link.
Added a large number of tests and added sections of subroutines
with the preface sect: for easier searchability.
Also, added a more informative "throw" when in testing mode.

version 20070615_2
Updated the links search page to allow for sorting based on
different criteria, such as modified time, so it acts like a recent
changes page.

version 20070615_2
Made the search case-insensitive

version 20070615_1
Added the ability to do a very simple search all your linked pages.

version 20070614_4
Added much more sophistication to the link tree creation.

version 20070614_3
You can now encrypt and decrypt multiple line pages.

version 20070614_2
Made a small post-decryption addition to the Blowfish code to strip
the block cipher padding.

version 20070614_1
Fixed an Internet Explorer bug where it can't handle XHTML formatted script
elements.  Since that's fixed, I re-added the keyboard shortcuts, but
changed the key to w, since f was a bad key (it's used in the CTRL-f